--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Roberto Aguilar - Website</title>
-
-        <meta name="description" content="">
+	    
+	<meta property=”og:type” content=”website” />
+    	<meta property=”og:title” content=”Reparación de Computadoras” />
+    	<meta property=”og:description” content=”Reparamos computadoras, formateo e instalación de sistemas operativos” />
+    	<meta property=”og:image” content=”https://” />
+    	<meta property="og:image" itemprop="image" content="https://g" />
+    	<meta property=”og:url” content=”https://robertoaguilar.es /”>
+	    
+        <meta name="description" content="Reparamos computadoras, formateo e instalación de sistemas operativos">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
