--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Roberto Aguilar - Website</title>
+        <title>Roberto Aguilar - Reparación de computadoras</title>
 	<link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
-        <meta name="description" content="">
+        <meta name="description" content="Reparación de computadoras, instalación de sistemas operativos y desbloqueo de celulares">
+	<meta property=”og:type” content=”website” />
+        <meta property=”og:title” content=”Reparación de computadoras” />
+        <meta property=”og:description” content=”Reparación de computadoras, instalación de sistemas operativos y desbloqueo de celulares” />
+        <meta property=”og:image” content=”https://robertoaguilar.es/img/right-home-image.png” />
+	    
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
