--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <meta property=”og:title” content=”Reparación de computadoras” />
         <meta property=”og:description” content=”Reparación de computadoras, instalación de sistemas operativos y desbloqueo de celulares” />
         <meta property=”og:image” content=”https://robertoaguilar.es/img/right-home-image.png” />
+	<meta property="og:image" itemprop="image" content="https://robertoaguilar.es/img/right-home-image.png" />
 	    
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
