--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                           <div class="about-box-text">
                             <h4>Emprendedor y Amante de la Tecnologia</h4>
                             <p>Honesto y Puntual con el trabajo requerido, residente en la ciudad de Puertos Armuelles, me dedico a la reparación y matenimiento
-de computadoras, el cual también pueden solitar a domicilio llamando al XXXX-XXXX y con gusto lo atendemos.</p>
+de computadoras, el cual también pueden solitar a domicilio llamando al 6154-7665 y con gusto lo atendemos.</p>
                             <div class="primary-button">
                               <a href="#3">Servicios</a>
                             </div>
